--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                             &deg;C
                                         </span>
                                         <span class="iarrow1">
-                                            <img src="https://raw.githubusercontent.com/vishalsr9/MSRWeb/main/assets/images/food_waste/c-arrow.svg" class="img-fluid i1r">
+                                            <img src="assets/images/c-arrow.svg" class="img-fluid i1r">
                                         </span>
                                     </div>
                                 </div>
@@ -253,7 +253,7 @@
                             <div class="row">
                                 <div class="col-md-3 text-center zdiv">
                                     <div class="fruits-inner ">
-                                        <img src="https://raw.githubusercontent.com/vishalsr9/MSRWeb/main/assets/images/thermometer/fuits-icon.svg" class="img-fluid list-icon1" />
+                                        <img src="assets/images/fuits-icon.svg" class="img-fluid list-icon1" />
                                     </div>
                                 </div>
                                 <div class="col-md-6 text-center">
@@ -305,7 +305,7 @@
                                 </div>
                                 <div class="col-md-3 text-center zdiv">
                                     <div class="vegetables-inner">
-                                        <img src="https://raw.githubusercontent.com/vishalsr9/MSRWeb/main/assets/images/thermometer/vegetables-icon.svg" class="img-fluid list-icon1" />
+                                        <img src="assets/images/vegetables-icon.svg" class="img-fluid list-icon1" />
                                     </div>
                                 </div>
                             </div>
